# fractal_generator

./: .gitignore  Cargo.toml
src/: comm_line_parsing.rs  fractals.rs  lib.rs  main.rs  my_complex.rs
src/fractals/: mandelbrot_fractal.rs  mod.rs
src/graphics/: bmp_img_maker.rs  color_mapping.rs  mod.rs
