[package]
name = "fractal_generator"
authors = [ "Christian Larsen <cjlarsencoding@gmail.com>" ]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/C-J-Larsen/fractal_generator"
keywords = [ "fractal", "fractals", "Mandelbrot", "Julia", "Newton" ]
description = "A library/program for generating Mandelbrot, Julia, and Newton fractals."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.0" }

[features]
